[tool.poetry]
name = "zodchy-tech"
version = "0.1.0"
description = ""
authors = ["Feofilaktov, Sergey <man@smairon.ru>"]
readme = "README.md"
packages = [{include = "zodchy"}]

[tool.poetry.dependencies]
python = "^3.12"
mkdocs-material = "^9.5.19"
mkdocs-literate-nav = "^0.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
